[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "timevar_poly"
authors = [{name = "Ifèdé Assogba", email = "cedrif1284@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/Romaric-py/timevar-poly"
Repository = "https://github.com/Romaric-py/timevar-poly"
Issues = "https://github.com/Romaric-py/timevar-poly/issues"
